TK-248 - Show Appointment Notes to Interpreters

--- a/app/views/interpreters/_appointment_details.html.erb
+++ b/app/views/interpreters/_appointment_details.html.erb
@@ -5,6 +5,9 @@
       <li><i class="fa fa-male mr-4"></i> <%= @appointment.modality.titleize %></li>
       <li><i class="fa fa-language mr-2"></i> <%= @appointment.language.name %></li>
       <li><i class="fa fa-book mr-3"></i> <%= @appointment.customer.name %></li>
+      <% unless @appointment.notes.blank? %>
+        <li><i class="fa fa-notebook mr-3"></i> Appointment notes: <br> <%= simple_format(@appointment.notes) %></li>
+      <% end %>
     </ul>
   </div><!-- ... -->
   <div>
