--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -4,11 +4,11 @@
     <div class="mt-5 md:col-span-2 md:mt-0">
       <div class="overflow-hidden bg-white rounded shadow">
         <div class="bg-white px-4 py-5 sm:p-6">
-          <div class="grid grid-cols-6 gap-6" data-controller="toggle-video-link">
+          <div class="relative grid grid-cols-6 gap-6" data-controller="toggle-video-link">
             <% if customer.blank? %>
               <%= render partial: "customer_select" %>
             <% else %>
-            <div class="col-span-6 sm:col-span-6">
+            <div class="col-span-6">
               <h3 class="text-tokanisecondary-700 mb-3"><%= customer.name.titleize %></h3>
               <div class="relative">
                 <div class="absolute inset-0 flex items-center" aria-hidden="true">
@@ -16,54 +16,50 @@
                 </div>
               </div>
             </div>
-            <div class="lg:col-span-3 sm:col-span-6" data-controller="select-group">
-              <div class="col-span-3 sm:col-span-3">
-                <div class="form-group">
-                  <%= form.label "Site*", class: 'block text-sm font-medium text-gray-700' %>
-                  <%= form.select :site_id, options_from_collection_for_select(sites, :id, :name, appointment.site_id), {}, {disabled: @field_disabled, class: 'form-control', data: {action: 'change->select-group#updateSelectRemote', select_group_url_param: department_select_list_sites_path, select_group_select_key_param: 'site_id', select_group_select_update_target_param: 'appointment_department_id'}} %>
-                </div>
-              </div>
-              <div class="col-span-3 sm:col-span-3">
-                <div class="form-group">
-                  <%= form.label :department_id, class: 'block text-sm font-medium text-gray-700' %>
-                  <%= form.select :department_id, options_for_select(departments, appointment.department_id), {}, {disabled: @field_disabled, class: 'form-control'} %>
-                </div>
+            <div class="col-span-6 lg:col-span-3" data-controller="select-group">
+              <div class="form-group">
+                <%= form.label "Site*", class: 'block text-sm font-medium text-gray-700' %>
+                <%= form.select :site_id, options_from_collection_for_select(sites, :id, :name, appointment.site_id), {}, {disabled: @field_disabled, class: 'form-control', data: {action: 'change->select-group#updateSelectRemote', select_group_url_param: department_select_list_sites_path, select_group_select_key_param: 'site_id', select_group_select_update_target_param: 'appointment_department_id'}} %>
               </div>
             </div>
-            <div class="lg:col-span-3 sm:col-span-6">
-              <div class="col-span-6 sm:col-span-6 lg:col-span-3">
-                <div class="form-group">
-                  <%= form.label "Start Time*", class: "block text-sm font-medium text-gray-700" %>
-                  <%= form.text_field :start_time, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", data: {controller: "flatpickr", flatpickr_enable_time: true,  flatpickr_minute_increment: 15, flatpickr_date_format: "F j, Y h:i K"} %>
-                </div>
-              </div>
-              <div class="col-span-6 sm:col-span-6 lg:col-span-3">
-                <div class="form-group">
-                  <%= form.label "Time zone*", class: "block text-sm font-medium text-gray-700" %>
-                  <%= form.select :time_zone, options_for_select(time_zone_select_options, default: current_user.time_zone) %>
-                </div>
-              </div>
-              <div class="col-span-6 sm:col-span-3">
-                <div class="form-group">
-                  <%= form.label "Duration (in minutes)*", class: "block text-sm font-medium text-gray-700" %>
-                  <%= form.number_field :duration , class: "form-control focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-s" %>
-                  <%# form.select :duration_type, options_for_select([['Minutes', 'minutes'], ['Hour(s)', 'hours']]), {}, class: "form-control focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-s" %>
-                </div>
+            <div class="col-span-6 lg:col-span-3">
+              <div class="form-group">
+                <%= form.label :department_id, class: 'block text-sm font-medium text-gray-700' %>
+                <%= form.select :department_id, options_for_select(departments, appointment.department_id), {}, {disabled: @field_disabled, class: 'form-control'} %>
               </div>
             </div>
-            <div class="lg:col-span-3 sm:col-span-6">
+            <div class="col-span-6 lg:col-span-2">
+              <div class="form-group">
+                <%= form.label "Start Time*", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_field :start_time, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", data: {controller: "flatpickr", flatpickr_enable_time: true,  flatpickr_minute_increment: 15, flatpickr_date_format: "F j, Y h:i K"} %>
+              </div>
+            </div>
+            <div class="col-span-6 lg:col-span-2">
+              <div class="form-group">
+                <%= form.label "Time zone*", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.select :time_zone, options_for_select(time_zone_select_options, default: current_user.time_zone) %>
+              </div>
+            </div>
+            <div class="col-span-6 lg:col-span-2">
+              <div class="form-group">
+                <%= form.label "Duration (in minutes)*", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.number_field :duration , class: "form-control focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-s" %>
+                <%# form.select :duration_type, options_for_select([['Minutes', 'minutes'], ['Hour(s)', 'hours']]), {}, class: "form-control focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-s" %>
+              </div>
+            </div>
+            <div class="col-span-6 lg:col-span-3">
               <div class="form-group">
                 <%= form.label "Modality*", class: "block text-sm font-medium text-gray-700" %>
                 <%= form.select :modality, options_for_select(appt_modality_options, appointment.modality), {prompt: "Please select An Modality"}, {data: {action: 'change->toggle-video-link#toggle' }, class: "form-control focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-s"} %>
               </div>
             </div>
-            <div class="lg:col-span-3 sm:col-span-6">
+            <div class="col-span-6 lg:col-span-3">
               <div class="form-group">
                 <%= form.label "Language*", class: "block text-sm font-medium text-gray-700" %>
                 <%= form.select :language_id, options_from_collection_for_select(languages, :id, :name), {prompt: "Please select A Language"}, {class: 'form-control', data: {interpreter_autocomplete_target: "languageId"}}  %>
               </div>
             </div>
-
+          </div>
             <div class="col-span-12 sm:col-span-12 lg:col-span-3">
               <div class="form-group">
                 <%= form.label :video_link, "Video Link (only Video modality)", class: "block text-sm font-medium text-gray-700" %>
