--- a/app/views/agencies/agency_detail_form.html.erb
+++ b/app/views/agencies/agency_detail_form.html.erb
@@ -62,7 +62,7 @@
                       <div class="sm:col-span-2">
                         <label for="region" class="block text-sm font-medium text-gray-700">State *</label>
                         <div class="mt-1">
-                          <%= physical_address.select :state, options_for_select(state_select_options), class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                          <%= physical_address.select :state, options_for_select(state_select_options, selected: physical_address.object&.state), include_blank: false, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                         </div>
                       </div>
 
