--- a/app/views/bill_rates/_bill_rate.html.erb
+++ b/app/views/bill_rates/_bill_rate.html.erb
@@ -71,7 +71,7 @@
         <dt class="text-sm font-medium text-tokanisecondary-500">Languages</dt>
         <dd class="mt-1 text-sm text-gray-900">
           <% if bill_rate.languages.empty? %>
-            <p>Rate not applied to any Languges</p>
+            <p>Rate not applied to any Languages</p>
           <% else %>
             <%= bill_rate.language_list.titleize %>
           <% end %>
