--- a/app/views/bill_rates/_form.html.erb
+++ b/app/views/bill_rates/_form.html.erb
@@ -196,8 +196,8 @@
 
             <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
               <div class="mt-1 lg:col-span-1 sm:col-span-2 sm:mt-0">
-                <h3 class="text-base font-semibold leading-6 text-tokanisecondary-700">Langugage Specific Rate*</h3>
-                <dt class="text-sm font-medium text-gray-500">If your rate is not a defaulat rate, please select which languges it will apply to.</dt>
+                <h3 class="text-base font-semibold leading-6 text-tokanisecondary-700">Language Specific Rate*</h3>
+                <dt class="text-sm font-medium text-gray-500">If your rate is not a default rate, please select which languages it will apply to.</dt>
                 <%= hidden_field_tag "#{form.object_name}[language_ids][]", '' %>
               </div>
               <div class="mt-1 pr-4 lg:col-span-2 sm:col-span-2 sm:mt-0 pl-0">
