--- a/app/views/pay_rates/_pay_rate.html.erb
+++ b/app/views/pay_rates/_pay_rate.html.erb
@@ -49,7 +49,7 @@
         <dt class="text-sm font-medium text-tokanisecondary-500">Languages</dt>
         <dd class="mt-1 text-sm text-gray-900">
           <% if pay_rate.languages.empty? %>
-            <p>Rate not applied to any Languges</p>
+            <p>Rate not applied to any Languages</p>
           <% else %>
             <%= pay_rate.language_list.titleize %>
           <% end %>
