--- a/app/views/process_batches/_by_interpreter.html.erb
+++ b/app/views/process_batches/_by_interpreter.html.erb
@@ -18,7 +18,7 @@
       <tr>
         <td>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <%= appt.refnumber %>
+          <%= appt.ref_number %>
         </td>
         <td></td>
         <td><%= number_to_currency(appt.total_paid) %> Paid</td>
