--- a/app/views/appointments/_cancel_reason_form.erb
+++ b/app/views/appointments/_cancel_reason_form.erb
@@ -8,7 +8,7 @@
       <%= form.select :cancel_reason, options_for_select(cancel_reason_dropdown_options, include_blank: "Select a reason") %>
     </div>
     <div>
-      <%= form.submit 'Submit', class: "h-auto inline-flex justify-center rounded-md border border-transparent bg-tokanisecondary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
+      <%= form.submit 'Submit', class: "h-auto inline-flex justify-center rounded-md border border-transparent bg-tokanisecondary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2", data: { "turbo-confirm": "Are you sure you want to cancel this appointment?" } %>
     </div>
   </div>
 <% end %>
