spelling out Service Recipient Number

--- a/app/views/recipients/_recipient.html.erb
+++ b/app/views/recipients/_recipient.html.erb
@@ -15,7 +15,7 @@
       </div>
 
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
-        <dt class="text-sm font-medium text-tokanisecondary-600">SRN </dt>
+        <dt class="text-sm font-medium text-tokanisecondary-600">Service Recipient Number</dt>
         <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= recipient.srn %></dd>
       </div>
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
