--- a/app/views/recipients/index.html.erb
+++ b/app/views/recipients/index.html.erb
@@ -22,7 +22,7 @@
                     <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm uppercase font-semibold text-gray-900 sm:pl-6"><%= sortable @recipients, :name, "Name" %></th>
                     <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Email</th>
                     <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Phone</th>
-                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">SRN</th>
+                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Service Recipient Number</th>
                     <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900">Customer</th>
                     <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900">Edit</th>
                   </tr>
